[package]
name = "onyx-storage"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
# metadata
rocksdb = { version = "0.24", features = ["lz4", "zstd"] }

# compression
lz4_flex = "0.11"
zstd = "0.13"

# serialization
serde = { version = "1", features = ["derive"] }
bincode = "1.3"

# configuration
toml = "0.8"

# async runtime (for ublk io_uring)
smol = "2"

# logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# error handling
thiserror = "2"
anyhow = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# memory alignment / hugepages
nix = { version = "0.29", features = ["mman", "fs"] }

# integrity
crc32fast = "1"
sha2 = "0.10"

# concurrency
crossbeam-channel = "0.5"

# FFI
libc = "0.2"
serde_json = "1"

[dev-dependencies]
tempfile = "3"
rand = "0.8"

[target.'cfg(target_os = "linux")'.dependencies]
libublk = "0.4"
