[package]
name = "onyx-storage"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
# metadata
rocksdb = { version = "0.24", features = ["lz4", "zstd"] }
onyx_metadb = { package = "onyx-metadb", path = "metadb", optional = true }

# compression
lz4_flex = "0.11"
zstd = "0.13"

# serialization
serde = { version = "1", features = ["derive"] }
bincode = "1.3"

# configuration
toml = "0.8"

# async runtime (for ublk io_uring)
smol = "2"

# logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# error handling
thiserror = "2"
anyhow = "1"

# CLI
clap = { version = "4", features = ["derive"] }
ctrlc = { version = "3", features = ["termination"] }

# memory alignment / hugepages
nix = { version = "0.29", features = ["mman", "fs", "signal"] }

# integrity
crc32fast = "1"
blake3 = "1"

# lock-free atomic Arc swap (for engine hot-reload)
arc-swap = "1"

# concurrency
crossbeam-channel = "0.5"
dashmap = "6"
parking_lot = "0.12"

# allocator
tikv-jemallocator = { version = "0.6", optional = true }

# FFI
libc = "0.2"
serde_json = "1"

[dev-dependencies]
tempfile = "3"
rand = "0.8"
serial_test = "3"

[features]
default = ["jemalloc"]
jemalloc = ["tikv-jemallocator"]
metadb = ["dep:onyx_metadb"]

[target.'cfg(target_os = "linux")'.dependencies]
libublk = "0.4"
io-uring = "0.7"
